--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://agodse21.github.io/weather-app",
+  "homepage": "http://parveenbarak.github.io/weather.github.io",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
